Fix slider image on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -175,10 +175,8 @@ margin-right: 10px;
 }
 
 .main-slider img {
-  position: relative;
   min-width:100%;
   min-height:100%;
-  max-height:100%;
   max-width:100%;
 }
 /* ==============
